--- a/BookService/BookService.csproj
+++ b/BookService/BookService.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Repositories\Repositories.csproj" />
+    <ProjectReference Include="..\Repositories\Data.csproj" />
   </ItemGroup>
 
 </Project>
